[package]
name = "cole-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
merkle-btree-storage = { version = "0.1.0", path = "../merkle-btree-storage" }
growable-bloom-filter = { version = "2.0.1", path = "../growable-bloom-filters" }
bincode = "1.3"
rand = "0.8.4"