[package]
name = "cole-star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cole-index = { version = "0.1.0", path = "../cole-index" }
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
merkle-btree-storage = { version = "0.1.0", path = "../merkle-btree-storage" }
bincode = "1.3"
rand = "0.8.4"