[package]
name = "growable-bitmap"
version = "0.2.0"
authors = ["Alexis Bourget <alexis.bourget@gmail.com>"]
edition = "2018"
description = "A growable (and shrinkable) compact boolean array."
license = "MIT"
documentation = "https://docs.rs/growable-bitmap/latest/growable-bitmap/index.html"
homepage = "https://github.com/poliorcetics/growable-bitmap/"
repository = "https://github.com/poliorcetics/growable-bitmap"
readme = "README.md"
keywords = ["boolean-array", "bitmap"]
# See https://crates.io/category_slugs.
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"