[package]
name = "lipp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
growable-bitmap = { version = "0.2.0", path = "../growable-bitmap" }
rand = "0.8.4"
utils = { version = "0.1.0", path = "../utils" }
rug = { version = "1.14.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
kvdb-rocksdb = "0.19.0"
bincode = "1.3.3"