[package]
name = "non-learn-cmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle-btree-storage = { version = "0.1.0", path = "../merkle-btree-storage" }
utils = { version = "0.1.0", path = "../utils" }
non-persist-trie = {version = "0.1.0", path = "../non-persist-trie" }
kvdb-rocksdb = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8.4"