[package]
name = "non-persist-trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
bincode = "1.3"
crossbeam-utils = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc", "rc"] }
rand = "0.8.4"
kvdb-rocksdb = "0.17.0"
utils = { version = "0.1.0", path = "../utils" }
patricia-trie = { version = "0.1.0", path = "../patricia-trie" }