[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
blake2b_simd = "1.0.0"
caches = "0.2"
rug = "1.14.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
growable-bloom-filter = { version = "2.0.1", path = "../growable-bloom-filters" }
bincode = "1.3"
fixed-hash = "0.7"
derive_more = "0.99"
primitive-types = { version = "0.10.1", features = ["serde"] }